--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(advent_of_code_2022)
 
 set(CMAKE_CXX_STANDARD 23)
 
-add_executable(advent_of_code_2022 main.cpp day_1/day_1.cpp day_1/day_1.h day_2/day_2.cpp day_2/day_2.h day_3/day_3.cpp day_3/day_3.h)
+add_executable(advent_of_code_2022 main.cpp day_1/day_1.cpp day_1/day_1.h day_2/day_2.cpp day_2/day_2.h day_3/day_3.cpp day_3/day_3.h day_4/day_4.cpp day_4/day_4.h)
