--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(advent_of_code_2022)
 
 set(CMAKE_CXX_STANDARD 23)
 
-add_executable(advent_of_code_2022 main.cpp day_01/day_1.cpp day_01/day_1.h day_02/day_2.cpp day_02/day_2.h day_03/day_3.cpp day_03/day_3.h day_04/day_4.cpp day_04/day_4.h day_05/day_5.cpp day_05/day_5.h day_06/day_6.cpp day_06/day_6.h day_07/day_7.cpp day_07/day_7.h day_08/day_8.cpp day_08/day_8.h day_09/day_9.cpp day_09/day_9.h day_10/day_10.cpp day_10/day_10.h day_11/day_11.cpp day_11/day_11.h)
+add_executable(advent_of_code_2022 main.cpp day_01/day_1.cpp day_01/day_1.h day_02/day_2.cpp day_02/day_2.h day_03/day_3.cpp day_03/day_3.h day_04/day_4.cpp day_04/day_4.h day_05/day_5.cpp day_05/day_5.h day_06/day_6.cpp day_06/day_6.h day_07/day_7.cpp day_07/day_7.h day_08/day_8.cpp day_08/day_8.h day_09/day_9.cpp day_09/day_9.h day_10/day_10.cpp day_10/day_10.h day_11/day_11.cpp day_11/day_11.h day_12/day_12.cpp day_12/day_12.h)
